@@ -13,8 +13,8 @@ scene.camera.motion.0.transformation = 1.0 0.0 0.0 0.0  0.0 1.0 0.0 0.0  0.0 0.0
 scene.camera.motion.1.time = 1.0
 scene.camera.motion.1.transformation = 1.0 0.0 0.0 0.0  0.0 1.0 0.0 0.0  0.0 0.0 1.0 0.0  0.5 0.0 0.0 1.0
 ################################################################################
-scene.materials.shell.type = mirror
-scene.materials.shell.kr = 0.75 0.75 0.75
+scene.materials.shell.type = matte
+scene.materials.shell.kd = 0.6 0.0 0.0
 scene.materials.shell.id = 255
 scene.materials.whitematte.type = matte
 scene.materials.whitematte.kd = 0.75 0.75 0.75
