@@ -161,7 +161,7 @@ bool EnvironmentCamera::SampleLens(const float time, const float u1, const float
 	return true;
 }
 
-float EnvironmentCamera::GetPDF(const Vector &eyeDir, const float filmX, const float filmY) const {
+float EnvironmentCamera::GetPDF(const Ray &eyeRay, const float filmX, const float filmY) const {
 	const float theta = M_PI * (filmHeight - filmY - 1.f) / filmHeight;
 	const float cameraPdfW = 1.f / (2.f * M_PI * M_PI * sinf(theta));
 
