@@ -103,6 +103,7 @@
 * Fixed a TILEPATH bug causing black renderings
 * Fixed BIDIRCPU and LIGHTCPU camera motion blur
 * Fixed a bug related to initial camera volume in PATHOCL
+* Fixed light tracing camera motion blur and arbitrary clipping plane support
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
